# librepo

./: .gitignore  .packit.yaml  .valgrindrc  .zuul.yaml  AUTHORS  CMakeLists.txt  CPack.librepo.description.txt  README.md  VERSION.cmake  doit.sh  examples.html  genindex.html  handle.html  index.html  lib.html  librepo.spec  packagetarget.html  py-modindex.html  result.html  search.html  searchindex.js  still_reachable.supp  update_doc.sh  valgrind.supp
acceptancetests/: run.sh
doc/: CMakeLists.txt  examples.rst  handle.rst
doc/c/: CMakeLists.txt  Doxyfile.in  Doxyfile.in.in
librepo/: CMakeLists.txt  checksum.c  checksum.h  cleanup.h  curl.c  curl.h  curltargetlist.c  curltargetlist.h  downloader.c  downloader.h  downloader_internal.h  downloadtarget.c  downloadtarget.h  downloadtarget.h.in  downloadtarget_internal.h  fastestmirror.c  fastestmirror.h  fastestmirror_internal.h  gpg.c  gpg.h  gpg_gpgme.c  gpg_internal.h  gpg_rpm.c  handle.c  handle.h  handle.h.in  handle_internal.h  internal_mirrorlist.c  internal_mirrorlist.h  librepo.c  librepo.h  librepo.pc.cmake  list.c  list.h  lrmirrorlist.c  lrmirrorlist.h  metadata_downloader.c  metadata_downloader.h  metalink.c  metalink.h  (+32 more)
librepo/python/: CMakeLists.txt  __init__.py  downloader-py.c  downloader-py.h  exception-py.c  exception-py.h  globalstate-py.h  handle-py.c  handle-py.h  librepomodule.c  logging.c  logging.h  metadatadownloader-py.c  metadatadownloader-py.h  metadatatarget-py.c  metadatatarget-py.h  packagedownloader-py.c  packagedownloader-py.h  packagetarget-py.c  packagetarget-py.h  result-py.c  result-py.h  typeconversion.c  typeconversion.h  yum-py.c  yum-py.h
librepo/python/python2/: CMakeLists.txt
librepo/python/python3/: CMakeLists.txt
tests/: CMakeLists.txt  README  README.rst  fixtures.c  fixtures.h  run_tests.sh.in  test_checksum.c  test_checksum.h  test_curltargetlist.c  test_curltargetlist.h  test_downloader.c  test_downloader.h  test_gpg.c  test_gpg.h  test_handle.c  test_handle.h  test_internal_mirrorlist.c  test_internal_mirrorlist.h  test_list.c  test_list.h  test_lrmirrorlist.c  test_lrmirrorlist.h  test_main.c  test_metalink.c  test_metalink.h  test_mirrorlist.c  test_mirrorlist.h  test_package_downloader.c  test_package_downloader.h  test_repo_zck.c  test_repo_zck.h  test_repoconf.c  test_repoconf.h  test_repomd.c  test_repomd.h  test_url_substitution.c  test_url_substitution.h  test_util.c  test_util.h  test_util_deprecated.c  (+5 more)
tests/python/module/: CMakeLists.txt  __init__.py  librepo_testmodule.c
tests/python/tests/: CMakeLists.txt  base.py  run_nosetests.sh.in  run_unittests.sh.in  test_handle.py  test_result.py  test_sanity.py  test_version.py  test_yum.py  test_yum_package_downloading.py  test_yum_repo_downloading.py  test_yum_repo_locating.py
tests/python/tests/servermock/: server.py
tests/python/tests/servermock/yum_mock/: config.py  yum_mock.py
tests/python/tests/servermock/yum_mock/static/01/: filesystem-2.4.44-1.fc16.i686.rpm
tests/python/tests/servermock/yum_mock/static/01/repodata/: fd96942c919628895187778633001cff61e872b8-other.sqlite.bz2  repomd.xml.asc  repomd.xml.asc.bad  repomd.xml.key
tests/python/tests/servermock/yum_mock/static/02/repodata/: 705a58b0e169bf1d2ade8e4aacc515086644ce16cee971906f920c798c5b17d0-other.sqlite.bz2
tests/python/tests/servermock/yum_mock/static/03/repodata/: 2f0db0b18f1eaa395523aa33561764f6bf24ba54c520e789f778b25339fbce7b-primary.sqlite.bz2  76b5b88e17d2fc404a2e3fe8ee229f0f5aba5c2b80359e998382b5ba2ea4f406-filelists.sqlite.bz2  b1ef4b4606483c7d741d2a3cedae6c89cf1c9201a17ffbe7d920b6f5a73b1744-other.sqlite.bz2  repomd.xml
tests/python/tests/servermock/yum_mock/static/04/repodata/: 23ff21cb3eb3f3f1b0ed19f8ce28106a6576ccd67ea41cd876dc947fa1263242-other.sqlite.bz2  8d9a1e82bee3c633f801432220609e3622f7c5b5d4da9dceffab33ab1cf02ebc-filelists.sqlite.bz2  9dfc1aa118abeb734358e583aeeb251d850485bb763dae65ce7a1e29cacc269c-primary.sqlite.bz2  repomd.xml
tests/python/tests/servermock/yum_mock/static/metalink/: badchecksum.xml  badfilename.xml  badfirsthost.xml  badfirsturl.xml  firsturlhascorruptedfiles.xml  good_01.xml  good_02.xml  metalink_with_alternates.xml  mirrors_01.xml  nourls.xml  varsub.xml
tests/python/tests/servermock/yum_mock/static/mirrorlist/: badfirsturl  firsturlhascorruptedfiles  good_01  good_02  nourls  varsub
tests/repos/repo_yum_01/repodata/: repomd.xml.asc  repomd.xml_bad.asc
tests/repos/repo_yum_02/repodata/: a09c42730c03b0d5defa3fd9213794c49e9bafbc67acdd8d4e87a2adf30b8752-primary.sqlite.bz2
tests/test_data/: repo-big.repo  repo-minimal.repo
tests/test_data/expired_test/: expired_key.asc  expired_key_config  test_data.txt  test_data.txt.asc
tests/test_data/metalinks/: metalink_bad_01  metalink_bad_02  metalink_good_01  metalink_good_02  metalink_good_03  metalink_really_bad_01  metalink_really_bad_02  metalink_really_bad_03  metalink_with_alternates
tests/test_data/mirrorlists/: mirrorlist_01  mirrorlist_02
tests/test_data/repo_yum_01/repodata/: 4034dcea76c94d3f7a9616779539a4ea8cac288f-filelists.sqlite.bz2  735cd6294df08bdf28e2ba113915ca05a151118e-primary.sqlite.bz2  generator.sh  repomd.xml  repomd.xml.asc  repomd.xml.key  repomd.xml.private-key.asc  repomd.xml_bad  repomd.xml_bad.key  repomd.xml_bad.key.asc  repomd.xml_bad.sig
tests/test_data/repo_yum_02/repodata/: 5b37f89f9f4474801ec5f23dc30d3d6cf9cf663cb75a6656aaa864a041836ffe-filelists.sqlite.bz2  5b3b362d644e8fa3b359db57be0ff5de8a08365ce9a59cddc3205244a968231e-comps.xml  repomd.xml
tests/test_data/repo_yum_03/repodata/: 014663433bafc2d09e870a6156e6169a091939916ae4149e1a951159e56c46f1-primary.sqlite.bz2  3f694f7c23d07f5b436de790791d5262406dfbe9b47380f708fd2b2e9bb8aabc-other.xml.zck  565b029a0d218e58d7b695be6664b3240c6c7b2dbd23e29136eabb63aabc8c74-filelists.xml.zck  81166ac5f4e2b7cff67fa5da3b8e8d6796f705dea6fdd426519e118d6421896d-filelists.sqlite.bz2  c055d6ff8d6fde12d02a80003b8216d348fbd541ca0f466e321568b16880ed0e-other.sqlite.bz2  cb8b33d29cfab5d51e91dfa4566d67f8dabff0335c863689363b005755083639-primary.xml.zck  repomd.xml
utils/: README.md  (+5 more)
(+38 files in other folders)
